[project]
name = "dl-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "transformers>=4.44.2",
    "accelerate>=0.33.0",
    "einops>=0.8.0",
    "timm>=1.0.9",
    "packaging>=24.1",
    "ninja>=1.11.1.1",
    "jupyter>=1.0.0",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "matplotlib>=3.9.2",
]


[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
